small style updates

--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@ title: about
 <article itemscope itemtype="http://schema.org/Person">
   <img itemprop="image" class="photo" src="{{ .Rel "static/avatar_fb.jpg" }}">
 
-  <p class="note">This page is marked as HTML5 microdata</p>
+  <p class="info">This page is marked as HTML5 microdata</p>
 
   <p class="lead">
     My name is <span itemprop="name">Alexander Solovyov</span>, and
