add ids to index.html to be able to refer them

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 title: Alexander Solovyov
 ----
 
-<h2>Online presence</h1>
+<h2 id="presence">Online presence</h1>
 
 <dl class="presence">
   <dt>
@@ -85,7 +85,7 @@ title: Alexander Solovyov
 
 <br>
 
-<h2>Projects
+<h2 id="projects">Projects
   <span class="note">
     (more at <a href="http://github.com/piranha/">GitHub</a>)
   </span>
