add link to shorrt to index page

--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,13 @@ title: Alexander Solovyov
     </h4>
     <span>List of open source clones of (old) popular games</span>
   </div>
+
+  <div class="span4">
+    <h4 class="row" data-repo="shorrt">
+      <a href="http://github.com/piranha/nomad/">shorrt</a>
+    </h4>
+    <span>The simplest possible global shortcuts for OS X</span>
+  </div>
 </div>
 
 <script type="text/javascript">
