--- a/src/linksoup/index.html
+++ b/src/linksoup/index.html
@@ -5,7 +5,8 @@ title: Link Soup
   This is a link and image collecting resource, expect few links a day.
 </p>
 
-{{ range .Site.Pages.Children .Url }}
+{{ with .Site.Pages.Children .Url }}
+{{ range .Slice 0 20 }}
 <div class="row">
   <div class="span8">
     {{ with cut .Process.Content "<article>" "</article>" }}
@@ -13,4 +14,5 @@ title: Link Soup
     {{ end }}
   </div>
 </div>
+{{ end }}
 {{ end }}
