update links with stuff, fix atoms etc

--- a/src/links/index.html
+++ b/src/links/index.html
@@ -1,5 +1,9 @@
-title: Link Soup
+title: Link Roll
 ----
+
+<style>
+  dd { margin-bottom: 1.5em; }
+</style>
 
 <p class="info">
   This is a link and image collecting resource, expect few links a day.
