--- a/src/links/index.html
+++ b/src/links/index.html
@@ -6,7 +6,8 @@ title: Link Roll
 </style>
 
 <p class="info">
-  This is a link and image collecting resource, expect few links a day.
+  This is a link and image collecting resource,
+  <a href="http://twitter.com/asolovyov_links">also on Twitter</a>.
 </p>
 
 <ul id="menu" class="nav nav-pills">
