--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@ title: Alexander Solovyov
     <h4 class="row" data-repo="opster">
       <a href="http://github.com/piranha/opster/">opster</a>
     </h4>
-    <span>Dead simple (yet powerful) command line parser</span>
+    <span>Simple, concise, powerful command line parser for Python</span>
   </div>
 
   <div class="span4">
@@ -155,11 +155,6 @@ title: Alexander Solovyov
       Simplest database (idea was to support any db) migration tool I could
       imagine
     </span>
-  </div>
-
-  <div class="span4">
-    <h4 class="row"><a href="project-root/">project-root</a></h4>
-    <span>Emacs project management tool</span>
   </div>
 
   <div class="span4">
