email on a main page

--- a/src/about.html
+++ b/src/about.html
@@ -15,16 +15,16 @@ title: about
 
   <p>
     I usually use nickname &ldquo;<span itemprop="nickname">piranha</span>&rdquo; everywhere
-    (though lately I began to use &ldquo;<span itemprop="nickname">asolovyov</span>&rdquo;
-    as well).
+    (though lately I tend to use &ldquo;<span itemprop="nickname">asolovyov</span>&rdquo;).
   </p>
 
   <p>
-    <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">I live
-    in <span itemprop="addressLocality">Kiev</span>, <span itemprop="addressCountry">Ukraine</span></span>,
-    working as <span itemprop="jobTitle">software developer</span>. Lately I switched to
-    writing in-browser applications and before that it was mostly web back-end
-    stuff in Python.
+    <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+      I live in <span itemprop="addressLocality">Kyiv</span>,
+      <span itemprop="addressCountry">Ukraine</span>
+    </span>, working as a <span itemprop="jobTitle">software developer</span>.
+    I'm writing in-browser applications for the last few years
+    and before that it was mostly web back-end stuff in Python.
   </p>
 
   <p>
