--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,13 @@ title: Alexander Solovyov
 
 </dl>
 
-<br>
+<h2 id="contacts">Contact me</h2>
+
+<p class="span8">
+  The simplest way to contact me is email: <script type="text/javascript">document.write("<n uers=\"znvygb:nyrknaqre\100fbybilbi\056arg\">nyrknaqre\100fbybilbi\056arg<\057n>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
+</p>
+
+<br/><br/>
 
 <h2 id="projects">Projects
   <span class="note">
