lesser dependency on feedburner

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ title: Alexander Solovyov
 <dl class="presence">
   <dt>
     <div class="icon">
-      <a href="http://feeds.feedburner.com/AmazonByteflow">
+      <a href="http://solovyov.net/blog.atom">
         <img src="static/services/rss_32.png">
       </a>
     </div>
@@ -25,7 +25,7 @@ title: Alexander Solovyov
 
   <dt>
     <div class="icon">
-      <a href="http://feeds.feedburner.com/BloggingSpree">
+      <a href="http://solovyov.net/en.atom">
         <img src="static/services/rss_32.png">
       </a>
     </div>
