--- a/src/photo.html
+++ b/src/photo.html
@@ -7,7 +7,8 @@ title: My photos
 </style>
 
 <h1>Photos</h1>
-<div class="note">Powered by <a href="http://showkr.solovyov.net/">Showkr</a></div>
 
-<script src="http://showkr.org/embed.js"
-        data-title="false" data-user="asolovyov"></script>
+<script src="http://showkr.solovyov.net/embed.js"
+        data-hide-title="true" data-path="user/asolovyov"></script>
+
+<div class="note">Powered by <a href="http://showkr.solovyov.net/">Showkr</a></div>
