reorder projects a bit

--- a/src/index.html
+++ b/src/index.html
@@ -95,20 +95,23 @@ title: Alexander Solovyov
 </h2>
 
 <div class="row projects">
+  <h3>Sites</h3>
+
   <div class="span4">
-    <h4 class="row" data-repo="goreplace">
-      <a href="http://github.com/piranha/goreplace/">goreplace</a>
+    <h4 class="row" data-repo="osgameclones">
+      <a href="http://osgameclones.com/">OSGC</a>
     </h4>
-    <span>grep/ack alternative with ability to replace (a-la sed)
-      and support for .hgignore/.gitignore</span>
+    <span>List of open source clones of (old) popular games</span>
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="adium-inline-images">
-      <a href="https://github.com/piranha/adium-inline-images">Adium Inline Images</a>
+    <h4 class="row" data-repo="showkr">
+      <a href="http://showkr.org/">Showkr</a>
     </h4>
-    <span>Show images inline in Adium</span>
+    <span>Minimalistic viewer for Flickr</span>
   </div>
+
+  <h3>Applications</h3>
 
   <div class="span4">
     <h4 class="row" data-repo="gostatic">
@@ -126,10 +129,18 @@ title: Alexander Solovyov
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="opster">
-      <a href="http://github.com/piranha/opster/">opster</a>
+    <h4 class="row" data-repo="goreplace">
+      <a href="http://github.com/piranha/goreplace/">goreplace</a>
     </h4>
-    <span>Simple, concise, powerful command line parser for Python</span>
+    <span>grep/ack alternative with ability to replace (a-la sed)
+      and support for .hgignore/.gitignore</span>
+  </div>
+
+  <div class="span4">
+    <h4 class="row" data-repo="shorrt">
+      <a href="http://github.com/piranha/nomad/">shorrt</a>
+    </h4>
+    <span>The simplest possible global shortcuts for OS X</span>
   </div>
 
   <div class="span4">
@@ -137,20 +148,6 @@ title: Alexander Solovyov
       <a href="http://github.com/piranha/webhooker/">webhooker</a>
     </h4>
     <span>Github webhook handler - runs a command on push</span>
-  </div>
-
-  <div class="span4">
-    <h4 class="row" data-repo="keymage">
-      <a href="http://github.com/piranha/keymage/">keymage</a>
-    </h4>
-    <span>Simple and small, but featureful enough JS keybinding library</span>
-  </div>
-
-  <div class="span4">
-    <h4 class="row" data-repo="tnetstrings.js">
-      <a href="http://github.com/piranha/tnetstrings.js/">tnetstrings.js</a>
-    </h4>
-    <span>JS implementation of <a href="http://tnetstrings.org">tnetstrings</a></span>
   </div>
 
   <div class="span4">
@@ -164,24 +161,40 @@ title: Alexander Solovyov
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="showkr">
-      <a href="http://showkr.org/">Showkr</a>
+    <h4 class="row" data-repo="adium-inline-images">
+      <a href="https://github.com/piranha/adium-inline-images">Adium Inline Images</a>
     </h4>
-    <span>Minimalistic viewer for Flickr</span>
+    <span>Show images inline in Adium</span>
+  </div>
+
+  <h3 style="clear: both">Libraries</h3>
+
+  <div class="span4">
+    <h4 class="row" data-repo="keymage">
+      <a href="http://github.com/piranha/keymage/">keymage</a>
+    </h4>
+    <span>Simple and small, but featureful enough JS keybinding library</span>
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="osgameclones">
-      <a href="http://osgameclones.com/">OSGC</a>
+    <h4 class="row" data-repo="keybind">
+      <a href="http://github.com/piranha/keybind/">keybind</a>
     </h4>
-    <span>List of open source clones of (old) popular games</span>
+    <span>A ClojureScript keybinding library</span>
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="shorrt">
-      <a href="http://github.com/piranha/nomad/">shorrt</a>
+    <h4 class="row" data-repo="opster">
+      <a href="http://github.com/piranha/opster/">opster</a>
     </h4>
-    <span>The simplest possible global shortcuts for OS X</span>
+    <span>Simple, concise, powerful command line parser for Python</span>
+  </div>
+
+  <div class="span4">
+    <h4 class="row" data-repo="tnetstrings.js">
+      <a href="http://github.com/piranha/tnetstrings.js/">tnetstrings.js</a>
+    </h4>
+    <span>JS implementation of <a href="http://tnetstrings.org">tnetstrings</a></span>
   </div>
 </div>
 
