--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@ title: Alexander Solovyov
 
   <div class="span4">
     <h4 class="row" data-repo="showkr">
-      <a href="http://showkr.org/">Showkr</a>
+      <a href="http://showkr.solovyov.net/">Showkr</a>
     </h4>
     <span>Minimalistic viewer for Flickr</span>
   </div>
