add puttext to index

--- a/src/index.html
+++ b/src/index.html
@@ -184,10 +184,10 @@ title: Alexander Solovyov
   </div>
 
   <div class="span4">
-    <h4 class="row" data-repo="opster">
-      <a href="http://github.com/piranha/opster/">opster</a>
+    <h4 class="row" data-repo="puttext">
+      <a href="http://github.com/piranha/puttext/">puttext</a>
     </h4>
-    <span>Simple, concise, powerful command line parser for Python</span>
+    <span>Gettext for JS, both translations and message collecting</span>
   </div>
 
   <div class="span4">
@@ -195,6 +195,13 @@ title: Alexander Solovyov
       <a href="http://github.com/piranha/tnetstrings.js/">tnetstrings.js</a>
     </h4>
     <span>JS implementation of <a href="http://tnetstrings.org">tnetstrings</a></span>
+  </div>
+
+  <div class="span4">
+    <h4 class="row" data-repo="opster">
+      <a href="http://github.com/piranha/opster/">opster</a>
+    </h4>
+    <span>Simple, concise, powerful command line parser for Python</span>
   </div>
 </div>
 
