--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@ title: Alexander Solovyov
 
   <div class="span4">
     <h4 class="row" data-repo="shorrt">
-      <a href="http://github.com/piranha/nomad/">shorrt</a>
+      <a href="http://github.com/piranha/shorrt/">shorrt</a>
     </h4>
     <span>The simplest possible global shortcuts for OS X</span>
   </div>
