better desc for adium-inline-images

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@ title: Alexander Solovyov
     <h4 class="row" data-repo="adium-inline-images">
       <a href="https://github.com/piranha/adium-inline-images">Adium Inline Images</a>
     </h4>
-    <span>Show images inline in Adium</span>
+    <span>Show image links as inline images on a click</span>
   </div>
 
   <h3 style="clear: both">Libraries</h3>
