--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@ title: Alexander Solovyov
     <a href="http://twitter.com/asolovyov">Twitter</a>
   </dt>
   <dd>
-    I'm chirping at Twitter a bit, but their API doesn't like me.
+    I'm chirping on Twitter a bit.
   </dd>
 
   <dt>
@@ -67,7 +67,7 @@ title: Alexander Solovyov
     </div>
     <a href="http://www.linkedin.com/in/asolovyov">Linkedin page</a>
   </dt>
-  <dd>Biggest social network of professionals.</dd>
+  <dd>You should be there, right? Right?</dd>
 
 
   <dt>
@@ -158,6 +158,13 @@ title: Alexander Solovyov
       Simplest database (idea was to support any db) migration tool I could
       imagine
     </span>
+  </div>
+
+  <div class="span4">
+    <h4 class="row" data-repo="piu">
+      <a href="https://github.com/piranha/piu">piu</a>
+    </h4>
+    <span>Engine behind <a href="http://paste.in.ua">paste.in.ua</a> pastebin</span>
   </div>
 
   <div class="span4">
