--- a/src/photo.html
+++ b/src/photo.html
@@ -8,7 +8,11 @@ title: My photos
 
 <h1>Photos</h1>
 
-<script src="http://showkr.solovyov.net/embed.js"
-        data-hide-title="true" data-path="user/asolovyov"></script>
+<div id="main" class="showkr"></div>
+
+<script src="http://showkr.solovyov.net/main.js"></script>
+<script type="text/javascript">
+    showkr.main("main", {"path": "user/asolovyov", "hide-title": true});
+</script>
 
 <div class="note">Powered by <a href="http://showkr.solovyov.net/">Showkr</a></div>
