--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@ title: Alexander Solovyov
       </a>
     </div>
     <a class="right" href="http://feeds.feedburner.com/AmazonByteflow">
-      <img src="http://feeds.feedburner.com/~fc/AmazonByteflow">
+      <img src="//feeds.feedburner.com/~fc/AmazonByteflow">
     </a>
     <a href="blog/">Blog in Russian</a>
   </dt>
@@ -30,7 +30,7 @@ title: Alexander Solovyov
       </a>
     </div>
     <a class="right" href="http://feeds.feedburner.com/BloggingSpree">
-      <img src="http://feeds.feedburner.com/~fc/BloggingSpree">
+      <img src="//feeds.feedburner.com/~fc/BloggingSpree">
     </a>
     <a href="en/">Blog in English</a>
   </dt>
