--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@ title: Alexander Solovyov
 
 <script type="text/javascript">
 setTimeout(function() {
-    JSONP.get("http://api.flickr.com/services/feeds/photos_public.gne",
+    JSONP.get("https://api.flickr.com/services/feeds/photos_public.gne",
               {id: "8226209@N04", format: "json"},
               function(feed) {
                   var photo = feed.items[0];
